@@ -64,6 +64,10 @@ PDF generation issues
    files have to be the current directory. Perhaps we should add an option to
    "rebase" or "map" paths for image inclusion?
 
+    kn: The original document location has not been maintained when converting
+    between multiple document formats, so that the images could not be located
+    anymore. Fixed.
+
 3. While rendering 2009-01-06-webdav-locking.txt and fixing 2, I see that the
    image is included on page 2, but no text is below the image. A similar
    issue happens when we render 2007-12-20-tree-yui.txt on page 5.
